<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Strings For App -->
    <string name="app_name">Gamers Delight</string>
    <string name="action_add">Add Game</string>
    <string name="titleHint">Please Enter Game Name</string>
    <string name="platformHint">Please Enter Platform (Ex. PS4)</string>
    <string name="genreHint">Please Enter Genre (Ex. Action)</string>
    <string name="detailsHint">Please Enter Game Details</string>
    <string name="createGame">Create New Game</string>

    <!-- Colors For App -->
    <color name="cream">#F5F5DC</color>
    <color name="brightPink">#FA25F6</color>
    <color name="slateBlue">#31698A</color>
    <color name="lightSlateBlue">#6FA9CB</color>
    <color name="darkGrey">#0B1014</color>
    <color name="orange">#FFA500</color>

</resources>
