<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cream">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/createGameTitle"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:hint="@string/titleHint" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/createGamePlatform"
        android:layout_gravity="center_horizontal"
        android:hint="@string/platformHint"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/createGameGenre"
        android:layout_gravity="center_horizontal"
        android:hint="@string/genreHint"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/createGameDetails"
        android:layout_gravity="center_horizontal"
        android:hint="@string/detailsHint"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createGame"
        android:id="@+id/createGame"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/orange"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="20sp" />
</LinearLayout>